# pilotconfig

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  config.json  generate_protobuf.sh  install-pilot-config-for-raspberry-pi.sh  pilot.sh  publish.sh  setup.cfg  setup.py
pilot/: CHANGELOG.md  PilotDriver.py  PilotServer.py  Plc.py  Sbc.py  __init__.py  arguments.py  build.py  compile.py  compiler.py  configdefs.json  helper.py  main.py  modulehelp.py  moduleinfo.py  pilot.py  pilotdriver.py  pilotplc.py  pilotserver.py  pilotsetup.py  plc.py  program.py  project.py  requirements.txt  sbc.py  targethardware.json  test.py
pilot/compiler/iec61131-3/: compiler.py
pilot/compiler/iec61131-3/template/: plc.c.templ  plc.h.templ
pilot/compiler/rust/: compiler.py
pilot/compiler/rust/template/: Cargo.toml  Makefile  (+1 more)
pilot/devices/: aio20.py  demo.py  i8.py  io16.py  o8.py
pilot/grpc/: pilotbuild_pb2.py  pilotbuild_pb2_grpc.py
pilot/grpc_gen/: pilotbuild_pb2.py
pilot/plugins/dcctrl/: configdefs.json
pilot/project/default/: Makefile
pilot/project/rust/default/: .gitignore  Cargo.toml  Makefile
pilot/project/rust/default/.cargo/: config
pilot/project/rust/default/extract-variables/src/: main.rs
pilot/project/rust/default/pilot_macro/: Cargo.toml
pilot/project/rust/default/pilot_macro/src/: lib.rs  pilot_bindings.rs  root_var.rs
pilot/project/rust/default/pilot_types/src/: lib.rs  macros.rs  var.rs
pilot/project/rust/default/src/: lib.rs  main_task.rs  variables.rs
pilot/project/rust/default/src/pilot/: bindings.rs  macros.rs  mod.rs  variables.rs
(+12 files in other folders)
