[package]
name = "pilot-fw"
version = "0.1.0"
authors = []
edition = "2018"
build = "build.rs"

[lib]
name = "pilot"
path = "src/lib.rs"
crate-type = ["staticlib"]

[workspace]
members = [
    "use-vars",
    "extract-variables",
]

[dependencies]
pilot_sys = { git = "https://gitlab.com/pilot-automation/nexus/pilot_sys" }
pilot_macro = { path = "/home/amd/work/pilot/rust-crates/pilot_macro" }

[dev-dependencies]
pilot_test = { path = "/home/amd/work/pilot/rust-crates/pilot_test" }