[package]
name = "pilot-fw"
version = "0.1.0"
authors = []
edition = "2018"
build = "build.rs"

[lib]
name = "pilot"
path = "src/lib.rs"
crate-type = ["staticlib"]

[workspace]
members = [
    "use-vars",
    "extract-variables",
]

[dependencies]
pilot_sys = { git = "https://gitlab.com/pilot-automation/nexus/pilot_sys", tag="v0.1.2" }
pilot_macro = { git = "https://gitlab.com/pilot-automation/nexus/pilot_macro", tag="v0.1.1" }

[dev-dependencies]
pilot_test = { git = "https://gitlab.com/pilot-automation/nexus/pilot_test", tag="v0.1.1" }